@@ -10,6 +10,7 @@ class Net::SSLeay::X509 : pointer {
   use Net::SSLeay::Constant as SSL;
   use Net::SSLeay::ASN1_OBJECT;
   use Net::SSLeay::X509_EXTENSION;
+  use Net::SSLeay::EVP_PKEY;
   
   use Fn;
   
@@ -71,5 +72,9 @@ class Net::SSLeay::X509 : pointer {
   native method get_ext : Net::SSLeay::X509_EXTENSION ($loc : int);
   
   native method DESTROY : void ();
+  
+  native method get_subject_name : Net::SSLeay::X509_NAME ();
+  
+  native method get_pubkey : Net::SSLeay::EVP_PKEY ();
   
 }
